# data_pipeline_optisus

./: .gitignore  CLAUDE.md  PLAN_GTFS_ZIP_UPLOAD.md  PLAN_MODULE.md  PLAN_NETEX_EXPORT.md  README.md  _inspect_netex.py  admin_ui.py  app.py  gtfs_database.py  gtfs_exporter.py  gtfs_kit_bridge.py  gtfs_mapper.py  ingestion_geo.py  ingestion_tabular.py  main.py  mlops_storage.py  mode_builders.py  pyproject.toml  requirements.txt  schemas.py  storage_layers.py  test_fleet.csv  test_geo.geojson  test_geo_ingestion.py  test_ingestion.py  test_mlops_storage.py  ui_validation.py
.agent/rules/: rule-1-data-centric-focus.md  rule-2-quality-gate.md  rule-3-immutability.md  rule-4-tech-stack.md  rule-5-directory-enforcement.md
.agent/workflows/: phase-1-architect-agent-review.md  phase-2a-ingestion-agent-tabular-data.md  phase-3-mlops-storage-agent.md  (+2 more)
.streamlit/: config.toml
pages/: 1_ml_data_pipeline.py  2_gtfs_pipeline.py
samples/: calendar_events.csv  charging_infrastructure.csv  electric_fleet_characteristics.csv  financial_economic_data.csv  fleet_energy_performance.csv  fleet_identification.csv  lifespan_and_depreciation.csv  operations_and_circulation.csv  routes.geojson  stop_connections.csv  stop_spatial_features.csv  stops.geojson  transported_passengers.csv  weather_observations.csv
tests/: test_database_profiler.py  test_gtfs_database.py  test_gtfs_exporter.py  test_gtfs_importer.py  test_gtfs_integration.py  test_gtfs_mapper.py  test_gtfs_schemas.py  test_incremental_import.py  test_netex_export.py  test_netex_scaffold.py  test_storage_layers.py
(+35 files in other folders)
